# clang_gtest

./: CMakeLists.txt  README.md
test/: main.cpp  test1.cpp  test2.cpp
